# blueprint-starlark

./: Cargo.toml
allocative/allocative/: Cargo.toml
allocative/allocative/src/: allocative_trait.rs  flamegraph.rs  global_root.rs  golden.rs  lib.rs  size_of.rs
allocative/allocative/src/test_derive/: bounds.rs  dst.rs  visit.rs  with_flamegraph.rs
allocative/allocative_derive/: Cargo.toml
allocative/allocative_derive/src/: derive_allocative.rs  root.rs
gazebo/cmp_any/: Cargo.toml
gazebo/display_container/: Cargo.toml
gazebo/display_container/src/: lib.rs
gazebo/dupe/: Cargo.toml
gazebo/dupe/src/: iter.rs  lib.rs  option.rs
gazebo/dupe_derive/: Cargo.toml
gazebo/dupe_derive/src/: dupe.rs
gazebo/gazebo/src/: hash.rs  phantom.rs  prelude.rs
gazebo/gazebo/src/ext/: vec.rs
gazebo/strong_hash/: Cargo.toml
gazebo/strong_hash/src/: lib.rs
gazebo/strong_hash_derive/: Cargo.toml
gazebo/strong_hash_tests/src/: lib.rs
starlark/: Cargo.toml
starlark/fuzz/fuzz_targets/: starlark.rs
starlark/src/: any.rs  assert.rs  coerce.rs  collections.rs  docs.rs  errors.rs  eval.rs  lib.rs  macros.rs  stdlib.rs  syntax.rs  values.rs
starlark/src/__derive_refs/: components.rs  param_spec.rs
starlark/src/analysis/: dubious.rs  find_call_name.rs  flow.rs  incompatible.rs  names.rs  performance.rs  types.rs  underscore.rs
starlark/src/analysis/unused_loads/: find.rs  find_tests.rs  remove.rs  remove_tests.rs
starlark/src/assert/: assert.rs
starlark/src/collections/: aligned_padded_str.rs
starlark/src/collections/symbol/: map.rs  symbol.rs
starlark/src/debug/: adapter.rs  evaluate.rs  inspect.rs
starlark/src/debug/adapter/: implementation.rs  tests.rs
starlark/src/docs/: multipage.rs  parse.rs
starlark/src/docs/tests/: markdown.rs  rustdocs.rs
starlark/src/environment/: globals.rs  methods.rs  modules.rs  names.rs  slots.rs
starlark/src/eval/: compiler.rs
starlark/src/eval/bc/: addr.rs  bytecode.rs  call.rs  for_loop.rs  frame.rs  if_debug.rs  instr_impl.rs  native_function.rs  opcode.rs  stack_ptr.rs
starlark/src/eval/bc/compiler/: assign.rs  assign_modify.rs  def.rs  expr.rs
starlark/src/eval/compiler/: args.rs  call.rs  compr.rs  constants.rs  def.rs  error.rs  expr.rs  known.rs  module.rs  scope.rs  small_vec_1.rs  stmt.rs  type_expr.rs  types.rs
starlark/src/eval/compiler/def_inline/: local_as_value.rs
starlark/src/eval/compiler/scope/: payload.rs  tests.rs
starlark/src/eval/runtime/: arguments.rs  cheap_call_stack.rs  evaluator.rs  file_loader.rs  frame_span.rs  frozen_file_span.rs  inlined_frame.rs  rust_loc.rs  slots.rs  small_duration.rs  visit_span.rs
starlark/src/eval/runtime/params/: parser.rs  spec.rs
starlark/src/eval/runtime/profile/: bc.rs  flamegraph.rs  heap.rs  instant.rs  mode.rs  or_instrumentation.rs  stmt.rs  tests.rs  time_flame.rs  typecheck.rs
starlark/src/stdlib/: breakpoint.rs  call_stack.rs  extra.rs  internal.rs  json.rs  partial.rs
starlark/src/stdlib/funcs/: min_max.rs  other.rs  zip.rs
starlark/src/tests/: call.rs  fstring.rs  replace_binary.rs  runtime.rs  uncategorized.rs  util.rs
starlark/src/tests/bc/: golden.rs
starlark/src/tests/derive/: alloc_value.rs  attrs.rs  docs.rs  unpack_value_attr.rs
starlark/src/tests/derive/freeze/: enums.rs  identity.rs
starlark/src/tests/derive/module/: basic.rs  default_value.rs  generic.rs  kwargs.rs  methods.rs  named_positional.rs  other_attributes.rs  return_impl.rs  special_params.rs  type_annotation.rs  unpack_value.rs
starlark/src/tests/derive/trace/: enums.rs  statics.rs
starlark/src/tests/opt/: if_rand.rs  type_is.rs
starlark/src/typing/: arc_ty.rs  basic.rs  bindings.rs  call_args.rs  callable.rs  callable_param.rs  ctx.rs  custom.rs  error.rs  fill_types_for_lint.rs  function.rs  interface.rs  mode.rs  small_arc_vec.rs  small_arc_vec_or_static.rs  starlark_value.rs  structs.rs  tests.rs  tuple.rs  ty.rs  typecheck.rs  user.rs
starlark/src/typing/oracle/: ctx.rs  traits.rs
starlark/src/util/: arc_or_static.rs  arc_str.rs
starlark/src/values/: alloc_value.rs  comparison.rs  demand.rs  freeze.rs  freeze_error.rs  frozen_ref.rs  owned.rs  owned_frozen_ref.rs  starlark_type_id.rs  trace.rs  traits.rs  type_repr.rs  unpack.rs  unpack_and_discard.rs  value_of.rs  value_of_unchecked.rs
starlark/src/values/layout/: aligned_size.rs  alloc_static_simple.rs  avalue.rs  complex.rs  const_type_id.rs  identity.rs  pointer.rs  typed.rs  value.rs  value_alloc_size.rs  value_captured.rs  value_lifetimeless.rs  value_not_special.rs  vtable.rs
starlark/src/values/layout/heap/: arena.rs  call_enter_exit.rs  heap_type.rs  repr.rs
starlark/src/values/layout/typed/: string.rs
starlark/src/values/thin_box_slice_frozen_value/: packed_impl.rs  thin_box.rs
starlark/src/values/types/: any.rs  any_array.rs  any_complex.rs  array.rs  bigint.rs  ellipsis.rs  function.rs  known_methods.rs  starlark_value_as_type.rs  type_instance_id.rs
starlark/src/values/types/bigint/: convert.rs
starlark/src/values/types/bool/: globals.rs  value.rs
starlark/src/values/types/set/: refs.rs  (+3 more)
starlark/src/values/typing/: any.rs  callable.rs  iter.rs  never.rs  ty.rs  type_type.rs
starlark_derive/: Cargo.toml
starlark_derive/src/module/: parse.rs  typ.rs
starlark_js_example/src/: lib.rs
starlark_lsp/src/: bind.rs  completion.rs  definition.rs  docs.rs  error.rs  exported.rs  inspect.rs  loaded.rs  server.rs  symbols.rs  test.rs
starlark_map/: Cargo.toml
starlark_map/src/: hash_value.rs  hashed.rs  hasher.rs  ordered_map.rs  ordered_set.rs  small_map.rs  small_set.rs  sorted_map.rs  sorted_set.rs  sorted_vec.rs  unordered_map.rs  unordered_set.rs  vec2.rs  vec_map.rs
starlark_map/src/small_map/: iter.rs
starlark_map/src/vec2/: iter.rs
starlark_map/src/vec_map/: iter.rs
starlark_syntax/: Cargo.toml
starlark_syntax/src/: codemap.rs  dialect.rs  dot_format_parser.rs  fast_string.rs  lexer.rs  lexer_tests.rs
starlark_syntax/src/syntax/: ast.rs  def.rs  grammar.lalrpop  grammar_util.rs  module.rs  parser.rs  payload_map.rs  type_expr.rs  uniplate.rs
(+64 files in other folders)
