[package]
authors = ["Facebook", "Alex Choi"]
description = "Derive helpers for the blueprint-starlark package."
documentation = "https://docs.rs/blueprint-starlark-derive"
edition = "2021"
license = { workspace = true }
name = "blueprint-starlark-derive"
repository = { workspace = true }
version = "0.13.0"

[lib]
proc-macro = true

[dependencies]
blueprint-dupe = { workspace = true }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2", features = ["extra-traits", "full", "visit", "visit-mut"] }
