[package]
authors = ["Facebook", "Alex Choi"]
description = "Map implementation with starlark-rust specific optimizations"
documentation = "https://docs.rs/blueprint-starlark-map"
edition = "2021"
license = { workspace = true }
name = "blueprint-starlark-map"
repository = { workspace = true }
version = "0.13.0"

[dependencies]
blueprint-allocative = { workspace = true, features = ["hashbrown"] }
blueprint-dupe = { workspace = true }

equivalent = { workspace = true }
fxhash = "0.2.1"
hashbrown = { version = "0.14.3", features = ["raw"] }
serde = { version = "1.0", features = ["derive"] }
blueprint-strong-hash = { workspace = true }

[dev-dependencies]
serde_json = "1.0.48"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(rust_nightly)"] }
