[package]
authors = ["Damien Martin-Guillerez <dmarting@google.com>", "Facebook", "Alex Choi"]
categories = ["parser-implementations", "development-tools"]
description = "Starlark language AST with extended syntax support"
documentation = "https://docs.rs/blueprint-starlark-syntax"
edition = "2021"
keywords = ["starlark", "skylark", "bazel", "language", "interpreter"]
license = { workspace = true }
name = "blueprint-starlark-syntax"
repository = { workspace = true }
version = "0.13.2"

[build-dependencies]
lalrpop = "0.19.7"

[dependencies]
annotate-snippets = { version = "0.9.0", features = [] }
anyhow = { workspace = true }
derivative = { workspace = true }
derive_more = { workspace = true }
lalrpop-util = "0.19.7"
logos = "0.15"
lsp-types = "0.94.1"
memchr = { workspace = true }
num-bigint = "0.4.3"
num-traits = "0.2"
once_cell = "1.8"
thiserror = "1.0.36"

blueprint-allocative = { workspace = true }
blueprint-dupe = { workspace = true }
blueprint-starlark-map = { version = "0.13.0", path = "../starlark_map" }

[dev-dependencies]
serde_json = "1.0"
