[package]
authors = ["Facebook", "Alex Choi"]
categories = ["rust-patterns"]
description = "Utilities to implement Display"
documentation = "https://docs.rs/blueprint-display-container"
edition = "2021"
license = { workspace = true }
name = "blueprint-display-container"
repository = { workspace = true }
version = "0.9.0"

[dependencies]
either = { workspace = true }
indenter = { workspace = true }
