[package]
authors = ["Facebook", "Alex Choi"]
categories = ["rust-patterns"]
description = "Marker for types which are cheap to clone"
documentation = "https://docs.rs/blueprint-dupe"
edition = "2021"
license = { workspace = true }
name = "blueprint-dupe"
repository = { workspace = true }
version = "0.9.1"

[dependencies]
blueprint-dupe-derive = { version = "=0.9.1", path = "../dupe_derive" }
