[package]
authors = ["Facebook", "Alex Choi"]
categories = ["rust-patterns"]
description = "Derive Dupe for blueprint-dupe crate"
documentation = "https://docs.rs/blueprint-dupe-derive"
edition = "2021"
license = { workspace = true }
name = "blueprint-dupe-derive"
repository = { workspace = true }
version = "0.9.1"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0.3"
syn = { version = "2", features = ["extra-traits"] }
