[package]
authors = ["Facebook", "Alex Choi"]
description = "Hash trait similar to std::hash::Hash but for strong/cryptographic hashes"
edition = "2021"
license = { workspace = true }
name = "blueprint-strong-hash"
repository = { workspace = true }
version = "0.1.0"

[dependencies]
num-bigint = { version = "0.4.3", optional = true }
ref-cast = { workspace = true }
blueprint-strong-hash-derive = { workspace = true }
triomphe = { version = "0.1.8", optional = true }
