[package]
authors = ["Facebook", "Alex Choi"]
description = "Proc macro for blueprint-strong-hash crate"
edition = "2021"
license = { workspace = true }
name = "blueprint-strong-hash-derive"
repository = { workspace = true }
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
quote = { workspace = true }
syn = { workspace = true }
